manifests/base/microservices/shipping/shipping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: sock-shop
  labels:
    name: shipping
    monitor: "true"
spec:
  selector:
    name: shipping
  ports:
    - name: http
      port: 80
      targetPort: 80
