manifests/base/microservices/shipping/shipping-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shipping-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shipping
      policyTypes:
        - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 8080
